Made code production ready and secured API keys